--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: go
 go:
 - '1.8.3'
 - 'tip'
-script: go test -v ./...
+script: go test -v ./lib/... .
 before_deploy: make release
 deploy:
   provider: releases
