fixup goreleaser config

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,9 +17,11 @@ archive:
     windows: Windows
     386: i386
     amd64: x86_64
-format_overides:
-    - goos: windows
-      format: zip
+archives:
+  -
+    format_overrides:
+      - goos: windows
+        format: zip
 checksum:
   name_template: 'checksums.txt'
 snapshot:
