--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: go
 go:
-- '1.11.4'
+- '1.15'
 - 'tip'
-script: env GO111MODULE=on go test -v ./lib/... .
+script: env GO111MODULE=on go test -v ./ghosttohugo/... .
